adds a static files dir and an image to the index html

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+{% load staticfiles %}
+
 <html>
 
 <head>
@@ -13,6 +16,8 @@
 	</div>
 	<div class="">
 		<a href="rango/about/">About</a><br />
+		<img src="{% static 'images/seinfeld_show.jpg' %}"
+		     alt="Picture of the Seinfeld Show"/>
 	</div>
 </body>
 
