adds a new template for 'about' and changes the needed parts in the appropriate view plus loads files from the new media directory and updates the projects urls

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -15,7 +15,7 @@
 		 <strong> {{ boldmessage }} </strong><br />
 	</div>
 	<div class="">
-		<a href="rango/about/">About</a><br />
+		<a href="/rango/about/">About</a><br />
 		<img src="{% static 'images/seinfeld_show.jpg' %}"
 		     alt="Picture of the Seinfeld Show"/>
 	</div>
